[Vlog] Added vimeo videos and bugfixes

--- a/src/scss/templates/_blog.scss
+++ b/src/scss/templates/_blog.scss
@@ -15,4 +15,10 @@
   @include media-breakpoint-up(xl) {
     column-count: 3;
   }
+  &.no-excerpt-or-content {
+    column-count: 1 !important;
+    hr {
+      display: none;
+    }
+  }
 }
