--- a/theme/snippets/jumplink-article-list-item-view-magazine.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-magazine.liquid
@@ -1,4 +1,5 @@
 {% assign ratioClass = "ratio-3-2" %}
+{% assign videoRatioClass = "ratio-16-9" %}
 {% assign imageSize = "2400x1600" %}
 {% assign imageCount = images | size %}
 {% assign imageSpacing = 0 %}
@@ -41,6 +42,12 @@
   {% assign articleHasContent = true %}
 {% endif %}
 
+{% if article.excerpt_or_content == blank %}
+  {% assign articleHasExcerptOrContent = false %}
+{% else %}
+  {% assign articleHasExcerptOrContent = true %}
+{% endif %}
+
 {% if articleHasContent == true and showDetail == false %}
   {% assign linkToArticle = true %}
 {% else %}
@@ -55,14 +62,32 @@
   <rv-shopify-article-item data-handle="{{article.handle}}">
     {% if showVideo %}
       <div class="row {% if linkToArticle %}cursor-pointer{% endif %}" {% if linkToArticle %}rv-route="'{{article.url}}'"{% endif %}>
-        <div class="col-12 col-md px-0 content-box {{ratioClass}}">
-          <img lazyload="auto" class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
-            <video class="content" preload="auto" controls>
-              <source src="{{ video }}" type="video/mp4">
+        <div class="col-12 col-md px-0 content-box {{videoRatioClass}}">
+          {% if videoPoster %}
+            <img lazyload="auto" class="content" src="{{videoPoster}}" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
+          {% endif %}
+          {% if videoType == 'video/mp4' %}
+            <video class="content" preload="auto" controls {% if videoPoster %}poster="{{videoPoster}}"{% endif %}>
+              <source src="{{video}}" type="video/mp4">
               <span rv-i18n-text="'system.video_tag_not_supported'">
                 {{'system.video_tag_not_supported'|t}}
               </span>
             </video>
+          {% endif %}
+          {% if videoType == 'vimeo' %}
+            <iframe
+              lazyload="auto"
+              class="content"
+              type="text/html"
+              src="https://player.vimeo.com/video/{{ video }}?color=D9998F&title=0&byline=0&portrait=0&autoplay=0&loop=0&autopause=1&background=0&muted=0"
+              frameborder="0"
+              webkitallowfullscreen
+              mozallowfullscreen
+              allowfullscreen
+              allowtransparency
+              scrolling="no">
+              </iframe>
+          {% endif %}
         </div>
       </div>
     {% endif %}
@@ -94,8 +119,8 @@
       {% endfor %}
     </div>
 
-
-    <div class="col-12 p-5 magazine-columns has-xs-spacing">
+    
+    <div class="col-12 p-5 magazine-columns has-xs-spacing {% unless articleHasExcerptOrContent %}no-excerpt-or-content{% endunless %}">
       <h2 class="h1">{{article.title}}</h2>
       <p class="small font-weight-bold">
         <span>{{ article.published_at | time_tag: '%d. %B %Y' }} </span>
