--- a/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
@@ -9,7 +9,7 @@
 {% endif %}
 
 {% if imageSize == blank %}
-  {% assign imageSize = '1200x1600' %}
+  {% assign imageSize = 'master' %}
 {% endif %}
 
 <rv-shopify-product-item handle="{{product.handle}}" class="{{colClass}} {{ orderClass }} px-0 content-box ratio-3-4">
