--- a/theme/snippets/jumplink-collection-grid-item.liquid
+++ b/theme/snippets/jumplink-collection-grid-item.liquid
@@ -3,10 +3,10 @@
   <div class="image-wrap">
     <a rv-route="'{{ collection.url }}'" href="{{ collection.url }}">
       {% if collection.image %}
-        {% assign image = collection | img_url: 'grande' %}
+        {% assign image = collection | img_url: 'master' %}
         {% assign title = collection.image.alt | escape %}
       {% else %}
-        {% assign image = collection.products.first | img_url: 'grande' %}
+        {% assign image = collection.products.first | img_url: 'master' %}
         {% assign title = collection.title | escape %}
       {% endif %}
           
