--- a/theme/templates/article.liquid
+++ b/theme/templates/article.liquid
@@ -22,7 +22,7 @@
 {% endif %}
 {% if article.metafields["global"]["video-poster-1"] %}
   {% assign videoPoster = article.metafields["global"]["video-poster-1"] %}
-{% endif %}"
+{% endif %}
 
 {% paginate article.comments by 10 %}
   {% case type %}
