--- a/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
@@ -3,10 +3,10 @@
 {% assign images_length = images | size %}
 {% if images_length <= 1 %}
   {% assign ratioClass = "ratio-3-2" %}
-  {% assign imageSize = "2400x1600" %}
+  {% assign imageSize = "master" %}
 {% else %}
   {% assign ratioClass = "ratio-3-4" %}
-  {% assign imageSize = "1200x1600" %}
+  {% assign imageSize = "master" %}
 {% endif %}
 
 {% assign spacings = '39,100,39' | split: ',' %}
