[Layout] Some layout changes, bigger icons, hamburger with lines

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -34,4 +34,4 @@
 //   src:url("font_67292bf9-8a22-4a89-8131-47f55dd5bc42.eot?#iefix");
 //   src:url("font_67292bf9-8a22-4a89-8131-47f55dd5bc42.eot?#iefix") format("eot"),url("font_6f293208-fc9f-46b9-9543-603a61412a62.woff2") format("woff2"),url("font_2d53c500-70cf-4d12-9c8c-abd0efe18145.woff") format("woff"),url("font_3bee70a4-5d0e-46dd-93c0-03c95ad74801.ttf") format("truetype");
 // }
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i&subset=latin-ext');
