--- a/theme/snippets/jumplink-article-comments.liquid
+++ b/theme/snippets/jumplink-article-comments.liquid
@@ -1,3 +1,4 @@
+<!-- jumplink-article-comments.liquid -->
 {% comment %}
   When a comment has just been submitted, it's not shown right away.
   Shopify needs to wait until it knows for sure that it is not spam to publish it.
