--- a/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
@@ -1,3 +1,4 @@
+<!-- jumplink-article-list-item-view-2-grid-2-images.liquid -->
 {% comment %} Similar to sections/one-story.liquid {% endcomment %}
 
 {% assign images_length = images | size %}
