--- a/theme/snippets/jumplink-article-list-item-view-2-grid-story-product.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-2-grid-story-product.liquid
@@ -1,3 +1,4 @@
+<!-- jumplink-article-list-item-view-2-grid-story-product.liquid -->
 {% assign product = all_products[article.metafields["global"]["product-handle"]] %}
 {% assign articleImageSize = "master" %}
 {% capture articleTitleStyle %}
