--- a/theme/snippets/jumplink-article-list-item-view-one-story.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-one-story.liquid
@@ -1,3 +1,4 @@
+<!-- jumplink-article-list-item-view-one-story.liquid -->
 {% comment %} Similar to sections/one-story.liquid {% endcomment %}
 
 {% assign images_length = images | size %}
