--- a/theme/snippets/jumplink-article-list-item.liquid
+++ b/theme/snippets/jumplink-article-list-item.liquid
@@ -1,3 +1,4 @@
+<!-- jumplink-article-list-item.liquid -->
 {% assign type = article.metafields["global"]["type"] %}
 {% assign color = article.metafields["global"]["color"] %}
 
