--- a/src/scss/templates/_blog.scss
+++ b/src/scss/templates/_blog.scss
@@ -10,7 +10,7 @@
     column-count: 2;
   }
   @include media-breakpoint-up(lg) {
-    column-count: 3;
+    column-count: 2;
   }
   @include media-breakpoint-up(xl) {
     column-count: 3;
@@ -18,6 +18,36 @@
   &.no-excerpt-or-content {
     column-count: 1 !important;
     hr {
+      display: none;
+    }
+  }
+}
+
+#article {
+  .magazine-columns {
+    column-count: 1;
+    @include media-breakpoint-up(sm) {
+      column-count: 1;
+    }
+    @include media-breakpoint-up(md) {
+      column-count: 2;
+    }
+    @include media-breakpoint-up(lg) {
+      column-count: 2;
+    }
+    @include media-breakpoint-up(xl) {
+      column-count: 2;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 1000px;
+    }
+  }
+}
+
+// Übersicht
+#blog {
+  .magazine-columns {
+    .info-comments {
       display: none;
     }
   }
