--- a/theme/sections/newsletter.liquid
+++ b/theme/sections/newsletter.liquid
@@ -139,7 +139,7 @@
     "locales": {
       "en": {
         "title": "Discover Fassbender's World",
-        "content_html": "I want news and inspiration about<br>Stories and Collections.<br>Take my {{ name }} and {{ email }}.",
+        "content_html": "<strong class=\"mb-2 d-block\">Subscribe to our newsletter and get 10% off your next purchase. <\/strong>I want news and inspiration about<br>Stories and Collections.<br>Take my {{name}} and {{email}}.",
         "checkbox_email": "I would like to hear from you via email.",
         "checkbox_privacy_html": "By signing up I agree to the <a href=\"/pages/legal-area\">Privacy Statement</a>.",
         "form_invalid": "Please check your entry.",
@@ -149,7 +149,7 @@
       },
       "de": {
         "title": "Entdecke Fassbender's Welt",
-        "content_html": "Ich möchte News und Inspirationen über Stories und Kollektionen erhalten. <br> Ich bin {{name}} und meine E-Mail lautet {{email}}.",
+        "content_html": "<strong class=\"mb-2 d-block\">Abonnieren Sie unseren Newsletter und erhalten Sie 10% Rabatt auf Ihren nächsten Einkauf.<\/strong>Ich möchte News und Inspirationen über Stories und Kollektionen erhalten.<br>Ich bin {{name}} und meine E-Mail lautet {{email}}.",
         "checkbox_email": "Ja, ich möchte von Fassbender per E-Mail informiert werden.",
         "checkbox_privacy_html": "Durch die Anmeldung akzeptiere ich eure <a href=\"/pages/legal-area\">Datenschutzerklärung</a>.",
         "form_invalid": "Bitte überprüfe deine Eingabe.",
